tests/tests/ui/create_missing_multiple_required_fields.stderr
error[E0277]: cannot create `User`: required field `name` is not set
  --> tests/ui/create_missing_multiple_required_fields.rs:13:13
   |
13 |     let _ = toasty::create!(User {});
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ call `.name(...)` before `.exec()`
   |
   = help: the trait `__user_create_has_name` is not implemented for `NotSet`
note: required by a bound in `_::<impl User>::__check_create`
  --> tests/ui/create_missing_multiple_required_fields.rs:1:10
   |
 1 | #[derive(toasty::Model)]
   |          ^^^^^^^^^^^^^ required by this bound in `_::<impl User>::__check_create`
   = note: this error originates in the macro `toasty::create` which comes from the expansion of the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot create `User`: required field `email` is not set
  --> tests/ui/create_missing_multiple_required_fields.rs:13:13
   |
13 |     let _ = toasty::create!(User {});
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ call `.email(...)` before `.exec()`
   |
   = help: the trait `__user_create_has_email` is not implemented for `NotSet`
note: required by a bound in `_::<impl User>::__check_create`
  --> tests/ui/create_missing_multiple_required_fields.rs:1:10
   |
 1 | #[derive(toasty::Model)]
   |          ^^^^^^^^^^^^^ required by this bound in `_::<impl User>::__check_create`
   = note: this error originates in the macro `toasty::create` which comes from the expansion of the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
